LOB locators test